<resources>
    <string name="app_name">Price Check</string>

    <string name="dialog_id">Please type or scan in the full ID.</string>
    <string name="dialog_syncwarn">Some data may be erased once synced. Are you sure you wish to proceed?</string>

    <string name="header1">Scan ID</string>
    <string name="header2">Manual Search</string>
    <string name="header3">Sync Database</string>
    <string name="header4">Restock Log</string>
    <string name="header5">Items to Add</string>
    <string name="desc1">Use the built-in barcode scanner camera to identify items</string>
    <string name="desc2">Find item by ID using keyboard input or Bluetooth scanner.</string>
    <string name="desc3">Update the internal database with newly loaded source file</string>
    <string name="desc4">(Admin Only) View a list of all items in need of restocking.</string>
    <string name="desc5">(Admin Only) View a list of items not yet registered in the database.</string>

    <!-- TAB HEADERS -->
    <string name="header_search">Search</string>
    <string name="header_new">New Items</string>
    <string name="header_restock">Restock Log</string>

    <string name="sample_id">4005808801022</string>
    <string name="sample_desc">COLORBOOK 12PK   </string>
    <string name="sample_dollarsign">$</string>
    <string name="sample_dollars">123</string>
    <string name="sample_cents">99</string>
    <string name="sample_price">$123.99</string>

    <string name="sample_record_vendor">JC1.50</string>
    <string name="sample_record_receive">99</string>
    <string name="sample_record_date">11/11/1111</string>

    <string name="log_date">Date</string>
    <string name="log_show_qty">Showroom</string>
    <string name="log_back_qty">Backstore</string>
    <string name="log_location">Location</string>
    <string name="log_other1_hint">Other 1</string>
    <string name="log_other1_hint2">Other 2</string>
    <string name="log_other1_hint3">Other 3</string>
    <string name="log_other1_hint4">Other 4</string>

    <string name="progress_msg">Syncing Database.\nThis could take a while.</string>

    <string name="str_button_purge">Purge</string>
    <string name="str_button_master">Admin Mode</string>
    <string name="str_button_help">Help</string>
    <string name="str_button_export">Export</string>
    <string name="str_button_save">Save</string>

    <string name="str_label_id">ID No.</string>
    <string name="str_label_desc">Description</string>
    <string name="str_label_order">Order History</string>
    <string name="str_label_rest">Restock Log</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
