<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:padding="8dp"
    android:background="@color/colorPrimary"
    android:id="@+id/root_list_item">

    <TextView
        android:id="@+id/list_vendor"
        style="@style/ListStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        tools:text="@string/sample_record_vendor"/>
    <TextView
        android:id="@+id/list_receive"
        style="@style/ListStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="3"
        tools:text="@string/sample_record_receive"/>
    <TextView
        android:id="@+id/list_date"
        style="@style/ListStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_weight="2"
        tools:text="@string/sample_record_date"/>

</LinearLayout>