<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:padding="16dp"
    android:id="@+id/root_list_newitem">
    <TextView
        android:id="@+id/newitem_desc"
        style="@style/ListStyle2"
        android:textSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        tools:text="@string/sample_desc"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/newitem_id"
            style="@style/ListStyle3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:layout_weight="2"
            tools:text="@string/sample_id"/>
        <TextView
            android:id="@+id/newitem_price"
            style="@style/ListStyle3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_weight="3"
            tools:text="@string/sample_price"/>
    </LinearLayout>
</LinearLayout>