<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingBottom="16dp"
    android:id="@+id/info_main"
    tools:background="@color/colorPrimary"
    tools:context="com.example.gadau.pricecheck.InformationActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="16dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/button_cancel"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_cancel_white_36dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="2dp"
                    android:layout_gravity="left">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="34sp"
                        android:textColor="@color/colorMenuText"
                        android:text="#"/>
                    <TextView
                        android:id="@+id/info_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="34sp"
                        android:textColor="@color/colorMenuText"
                        tools:text="@string/sample_id"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right">
                <ToggleButton
                    android:id="@+id/button_restock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/info_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/colorMenuText"
            tools:text="@string/sample_desc"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="top">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="56sp"
                android:paddingTop="20dp"
                android:textColor="@color/colorMenuText"
                android:text="@string/sample_dollarsign"/>
            <TextView
                android:id="@+id/info_dollars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="90sp"
                android:padding="2dp"
                android:textColor="@color/colorMenuText"
                tools:text="@string/sample_dollars"/>
            <TextView
                android:id="@+id/info_cents"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingTop="16dp"
                android:textSize="40sp"
                android:textColor="@color/colorMenuText"
                tools:text="@string/sample_cents"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#fff"/>
        <TextView
            style="@style/TextLabelInfo"
            android:text="@string/str_label_order"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#fff"
            android:layout_marginBottom="10dp"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rec_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/fragment_log"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="#fff"/>
        <TextView
            style="@style/TextLabelInfo"
            android:text="@string/str_label_rest"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#fff"
            android:layout_marginBottom="10dp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rest_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/fragment_log2"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <ImageView
            android:id="@+id/button_add"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_add_circle_outline_white_24dp"/>
    </LinearLayout>
</ScrollView>
</LinearLayout>
